--- a/CreateAppShapefiles/App2ShapeFiles_County.ipynb
+++ b/CreateAppShapefiles/App2ShapeFiles_County.ipynb
@@ -246,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-5-c9b940a1f14f>:21: SettingWithCopyWarning: \n",
+      "<ipython-input-5-74f1e8e1e5c6>:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -277,11 +277,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>Shape_Length</th>\n",
        "      <th>Shape_Area</th>\n",
@@ -336,20 +336,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            24128          UTag_RU1                 49001   \n",
-       "1         1  Polygon            24129          UTag_RU2                 49003   \n",
-       "2         2  Polygon            24151         UTag_RU24                 49013   \n",
+       "   OBJECTID    Shape  UnitID   UnitUUID NativeID       Name  TypeCV StateCV  \\\n",
+       "0         0  Polygon   24128   UTag_RU1    49001     Beaver  County      UT   \n",
+       "1         1  Polygon   24129   UTag_RU2    49003  Box Elder  County      UT   \n",
+       "2         2  Polygon   24151  UTag_RU24    49013   Duchesne  County      UT   \n",
        "\n",
-       "  ReportingUnitName ReportingUnitTypeCV StateCV  Shape_Length  Shape_Area  \\\n",
-       "0            Beaver              County      UT      4.225326    0.690759   \n",
-       "1         Box Elder              County      UT      6.110898    1.880748   \n",
-       "2          Duchesne              County      UT      3.918885    0.891891   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-114.05049 38.49996, -114.05015 38.5...  \n",
-       "1  POLYGON ((-114.04255 41.21092, -114.04172 41.9...  \n",
-       "2  POLYGON ((-110.90435 40.70150, -110.89777 40.7...  "
+       "   Shape_Length  Shape_Area                                           geometry  \n",
+       "0      4.225326    0.690759  POLYGON ((-114.05049 38.49996, -114.05015 38.5...  \n",
+       "1      6.110898    1.880748  POLYGON ((-114.04255 41.21092, -114.04172 41.9...  \n",
+       "2      3.918885    0.891891  POLYGON ((-110.90435 40.70150, -110.89777 40.7...  "
       ]
      },
      "execution_count": 5,
@@ -387,11 +382,11 @@
     "dfs_2County_UT = pd.DataFrame() #empty dataframe\n",
     "dfs_2County_UT['OBJECTID'] = dfs_1County_UT.index\n",
     "dfs_2County_UT['Shape'] = 'Polygon'\n",
-    "dfs_2County_UT['ReportingUnitID'] = dfs_1County_UT['ReportingUnitID']\n",
-    "dfs_2County_UT['ReportingUnitUUID'] = dfs_1County_UT['ReportingUnitUUID']\n",
-    "dfs_2County_UT['ReportingUnitNativeID'] = dfs_1County_UT['ReportingUnitNativeID']\n",
-    "dfs_2County_UT['ReportingUnitName'] = dfs_1County_UT['ReportingUnitName']\n",
-    "dfs_2County_UT['ReportingUnitTypeCV'] = dfs_1County_UT['ReportingUnitTypeCV']\n",
+    "dfs_2County_UT['UnitID'] = dfs_1County_UT['ReportingUnitID']\n",
+    "dfs_2County_UT['UnitUUID'] = dfs_1County_UT['ReportingUnitUUID']\n",
+    "dfs_2County_UT['NativeID'] = dfs_1County_UT['ReportingUnitNativeID']\n",
+    "dfs_2County_UT['Name'] = dfs_1County_UT['ReportingUnitName']\n",
+    "dfs_2County_UT['TypeCV'] = dfs_1County_UT['ReportingUnitTypeCV']\n",
     "dfs_2County_UT['StateCV'] = dfs_1County_UT['StateCV_y']\n",
     "dfs_2County_UT['Shape_Length'] = dfs_1County_UT['Shape_Leng']\n",
     "dfs_2County_UT['Shape_Area'] = dfs_1County_UT['Shape_Area']\n",
@@ -410,7 +405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-6-222c2f54ade9>:21: SettingWithCopyWarning: \n",
+      "<ipython-input-6-692cc2a8fd88>:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -441,11 +436,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>Shape_Length</th>\n",
        "      <th>Shape_Area</th>\n",
@@ -500,20 +495,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            20739            NM_C_7                 35011   \n",
-       "1         1  Polygon            20749           NM_C_17                 35029   \n",
-       "2         2  Polygon            20751           NM_C_19                 35033   \n",
+       "   OBJECTID    Shape  UnitID UnitUUID NativeID     Name  TypeCV StateCV  \\\n",
+       "0         0  Polygon   20739   NM_C_7    35011  De Baca  County      NM   \n",
+       "1         1  Polygon   20749  NM_C_17    35029     Luna  County      NM   \n",
+       "2         2  Polygon   20751  NM_C_19    35033     Mora  County      NM   \n",
        "\n",
-       "  ReportingUnitName ReportingUnitTypeCV StateCV  Shape_Length  Shape_Area  \\\n",
-       "0           De Baca              County      NM      3.451230    0.592267   \n",
-       "1              Luna              County      NM      3.504984    0.734031   \n",
-       "2              Mora              County      NM      3.907811    0.499959   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-104.89241 34.25992, -104.89202 34.6...  \n",
-       "1  POLYGON ((-108.22981 32.20716, -108.22934 32.5...  \n",
-       "2  POLYGON ((-105.72471 35.90021, -105.71861 35.9...  "
+       "   Shape_Length  Shape_Area                                           geometry  \n",
+       "0      3.451230    0.592267  POLYGON ((-104.89241 34.25992, -104.89202 34.6...  \n",
+       "1      3.504984    0.734031  POLYGON ((-108.22981 32.20716, -108.22934 32.5...  \n",
+       "2      3.907811    0.499959  POLYGON ((-105.72471 35.90021, -105.71861 35.9...  "
       ]
      },
      "execution_count": 6,
@@ -551,11 +541,11 @@
     "dfs_2County_NM = pd.DataFrame() #empty dataframe\n",
     "dfs_2County_NM['OBJECTID'] = dfs_1County_NM.index\n",
     "dfs_2County_NM['Shape'] = 'Polygon'\n",
-    "dfs_2County_NM['ReportingUnitID'] = dfs_1County_NM['ReportingUnitID']\n",
-    "dfs_2County_NM['ReportingUnitUUID'] = dfs_1County_NM['ReportingUnitUUID']\n",
-    "dfs_2County_NM['ReportingUnitNativeID'] = dfs_1County_NM['ReportingUnitNativeID']\n",
-    "dfs_2County_NM['ReportingUnitName'] = dfs_1County_NM['ReportingUnitName']\n",
-    "dfs_2County_NM['ReportingUnitTypeCV'] = dfs_1County_NM['ReportingUnitTypeCV']\n",
+    "dfs_2County_NM['UnitID'] = dfs_1County_NM['ReportingUnitID']\n",
+    "dfs_2County_NM['UnitUUID'] = dfs_1County_NM['ReportingUnitUUID']\n",
+    "dfs_2County_NM['NativeID'] = dfs_1County_NM['ReportingUnitNativeID']\n",
+    "dfs_2County_NM['Name'] = dfs_1County_NM['ReportingUnitName']\n",
+    "dfs_2County_NM['TypeCV'] = dfs_1County_NM['ReportingUnitTypeCV']\n",
     "dfs_2County_NM['StateCV'] = dfs_1County_NM['StateCV_y']\n",
     "dfs_2County_NM['Shape_Length'] = dfs_1County_NM['Shape_Leng']\n",
     "dfs_2County_NM['Shape_Area'] = dfs_1County_NM['Shape_Area']\n",
@@ -574,13 +564,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-7-0d4bce889097>:9: SettingWithCopyWarning: \n",
+      "<ipython-input-7-e38840375bcb>:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_1RU_County_TX['ReportingUnitName'] = df_1RU_County_TX['ReportingUnitName'].str.title()\n",
-      "<ipython-input-7-0d4bce889097>:23: SettingWithCopyWarning: \n",
+      "<ipython-input-7-e38840375bcb>:23: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -611,11 +601,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>Shape_Length</th>\n",
        "      <th>Shape_Area</th>\n",
@@ -670,20 +660,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            22854          TX_48349                 48349   \n",
-       "1         1  Polygon            22859          TX_48369                 48369   \n",
-       "2         2  Polygon            22874          TX_48429                 48429   \n",
+       "   OBJECTID    Shape  UnitID  UnitUUID NativeID     Name  TypeCV StateCV  \\\n",
+       "0         0  Polygon   22854  TX_48349    48349   Goliad  County      TX   \n",
+       "1         1  Polygon   22859  TX_48369    48369   Grimes  County      TX   \n",
+       "2         2  Polygon   22874  TX_48429    48429  Hidalgo  County      TX   \n",
        "\n",
-       "  ReportingUnitName ReportingUnitTypeCV StateCV  Shape_Length  Shape_Area  \\\n",
-       "0            Goliad              County      TX      2.040917    0.205341   \n",
-       "1            Grimes              County      TX      2.192218    0.195546   \n",
-       "2           Hidalgo              County      TX      3.165720    0.371341   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-97.77853 28.66803, -97.41734 28.925...  \n",
-       "1  POLYGON ((-96.18831 30.59961, -96.18678 30.605...  \n",
-       "2  POLYGON ((-98.58529 26.26027, -98.32067 26.783...  "
+       "   Shape_Length  Shape_Area                                           geometry  \n",
+       "0      2.040917    0.205341  POLYGON ((-97.77853 28.66803, -97.41734 28.925...  \n",
+       "1      2.192218    0.195546  POLYGON ((-96.18831 30.59961, -96.18678 30.605...  \n",
+       "2      3.165720    0.371341  POLYGON ((-98.58529 26.26027, -98.32067 26.783...  "
       ]
      },
      "execution_count": 7,
@@ -723,11 +708,11 @@
     "dfs_2County_TX = pd.DataFrame() #empty dataframe\n",
     "dfs_2County_TX['OBJECTID'] = dfs_1County_TX.index\n",
     "dfs_2County_TX['Shape'] = 'Polygon'\n",
-    "dfs_2County_TX['ReportingUnitID'] = dfs_1County_TX['ReportingUnitID']\n",
-    "dfs_2County_TX['ReportingUnitUUID'] = dfs_1County_TX['ReportingUnitUUID']\n",
-    "dfs_2County_TX['ReportingUnitNativeID'] = dfs_1County_TX['ReportingUnitNativeID']\n",
-    "dfs_2County_TX['ReportingUnitName'] = dfs_1County_TX['ReportingUnitName']\n",
-    "dfs_2County_TX['ReportingUnitTypeCV'] = dfs_1County_TX['ReportingUnitTypeCV']\n",
+    "dfs_2County_TX['UnitID'] = dfs_1County_TX['ReportingUnitID']\n",
+    "dfs_2County_TX['UnitUUID'] = dfs_1County_TX['ReportingUnitUUID']\n",
+    "dfs_2County_TX['NativeID'] = dfs_1County_TX['ReportingUnitNativeID']\n",
+    "dfs_2County_TX['Name'] = dfs_1County_TX['ReportingUnitName']\n",
+    "dfs_2County_TX['TypeCV'] = dfs_1County_TX['ReportingUnitTypeCV']\n",
     "dfs_2County_TX['StateCV'] = dfs_1County_TX['StateCV_y']\n",
     "dfs_2County_TX['Shape_Length'] = dfs_1County_TX['Shape_Leng']\n",
     "dfs_2County_TX['Shape_Area'] = dfs_1County_TX['Shape_Area']\n",
@@ -767,11 +752,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>Shape_Length</th>\n",
        "      <th>Shape_Area</th>\n",
@@ -826,20 +811,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            24128          UTag_RU1                 49001   \n",
-       "1         1  Polygon            24129          UTag_RU2                 49003   \n",
-       "2         2  Polygon            24151         UTag_RU24                 49013   \n",
+       "   OBJECTID    Shape  UnitID   UnitUUID NativeID       Name  TypeCV StateCV  \\\n",
+       "0         0  Polygon   24128   UTag_RU1    49001     Beaver  County      UT   \n",
+       "1         1  Polygon   24129   UTag_RU2    49003  Box Elder  County      UT   \n",
+       "2         2  Polygon   24151  UTag_RU24    49013   Duchesne  County      UT   \n",
        "\n",
-       "  ReportingUnitName ReportingUnitTypeCV StateCV  Shape_Length  Shape_Area  \\\n",
-       "0            Beaver              County      UT      4.225326    0.690759   \n",
-       "1         Box Elder              County      UT      6.110898    1.880748   \n",
-       "2          Duchesne              County      UT      3.918885    0.891891   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-114.05049 38.49996, -114.05015 38.5...  \n",
-       "1  POLYGON ((-114.04255 41.21092, -114.04172 41.9...  \n",
-       "2  POLYGON ((-110.90435 40.70150, -110.89777 40.7...  "
+       "   Shape_Length  Shape_Area                                           geometry  \n",
+       "0      4.225326    0.690759  POLYGON ((-114.05049 38.49996, -114.05015 38.5...  \n",
+       "1      6.110898    1.880748  POLYGON ((-114.04255 41.21092, -114.04172 41.9...  \n",
+       "2      3.918885    0.891891  POLYGON ((-110.90435 40.70150, -110.89777 40.7...  "
       ]
      },
      "execution_count": 8,
@@ -882,11 +862,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>Shape_Length</th>\n",
        "      <th>Shape_Area</th>\n",
@@ -1054,31 +1034,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     OBJECTID    Shape  ReportingUnitID ReportingUnitUUID  \\\n",
-       "0           0  Polygon            24128          UTag_RU1   \n",
-       "1           1  Polygon            24129          UTag_RU2   \n",
-       "2           2  Polygon            24151         UTag_RU24   \n",
-       "3           3  Polygon            24152         UTag_RU25   \n",
-       "4           4  Polygon            24154         UTag_RU27   \n",
-       "..        ...      ...              ...               ...   \n",
-       "249       249  Polygon            22791          TX_48097   \n",
-       "250       250  Polygon            22805          TX_48153   \n",
-       "251       251  Polygon            22846          TX_48317   \n",
-       "252       252  Polygon            22871          TX_48417   \n",
-       "253       253  Polygon            22916          TX_48597   \n",
-       "\n",
-       "    ReportingUnitNativeID ReportingUnitName ReportingUnitTypeCV StateCV  \\\n",
-       "0                   49001            Beaver              County      UT   \n",
-       "1                   49003         Box Elder              County      UT   \n",
-       "2                   49013          Duchesne              County      UT   \n",
-       "3                   49015             Emery              County      UT   \n",
-       "4                   49019             Grand              County      UT   \n",
-       "..                    ...               ...                 ...     ...   \n",
-       "249                 48097             Brown              County      TX   \n",
-       "250                 48153              Clay              County      TX   \n",
-       "251                 48317          Franklin              County      TX   \n",
-       "252                 48417              Hays              County      TX   \n",
-       "253                 48597             Llano              County      TX   \n",
+       "     OBJECTID    Shape  UnitID   UnitUUID NativeID       Name  TypeCV StateCV  \\\n",
+       "0           0  Polygon   24128   UTag_RU1    49001     Beaver  County      UT   \n",
+       "1           1  Polygon   24129   UTag_RU2    49003  Box Elder  County      UT   \n",
+       "2           2  Polygon   24151  UTag_RU24    49013   Duchesne  County      UT   \n",
+       "3           3  Polygon   24152  UTag_RU25    49015      Emery  County      UT   \n",
+       "4           4  Polygon   24154  UTag_RU27    49019      Grand  County      UT   \n",
+       "..        ...      ...     ...        ...      ...        ...     ...     ...   \n",
+       "249       249  Polygon   22791   TX_48097    48097      Brown  County      TX   \n",
+       "250       250  Polygon   22805   TX_48153    48153       Clay  County      TX   \n",
+       "251       251  Polygon   22846   TX_48317    48317   Franklin  County      TX   \n",
+       "252       252  Polygon   22871   TX_48417    48417       Hays  County      TX   \n",
+       "253       253  Polygon   22916   TX_48597    48597      Llano  County      TX   \n",
        "\n",
        "     Shape_Length  Shape_Area  \\\n",
        "0        4.225326    0.690759   \n",
@@ -1116,13 +1083,13 @@
    ],
    "source": [
     "# drop NA rows\n",
-    "outdf = outdf.dropna(subset=['ReportingUnitID'])\n",
+    "outdf = outdf.dropna(subset=['UnitID'])\n",
     "outdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
