--- a/CreateAppShapefiles/App2ShapeFiles_Custom_B.ipynb
+++ b/CreateAppShapefiles/App2ShapeFiles_Custom_B.ipynb
@@ -260,11 +260,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
@@ -274,7 +274,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24427.0</td>\n",
+       "      <td>25978.0</td>\n",
        "      <td>CAag_RU67</td>\n",
        "      <td>DAU00125</td>\n",
        "      <td>Lost River</td>\n",
@@ -286,7 +286,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24428.0</td>\n",
+       "      <td>25979.0</td>\n",
        "      <td>CAag_RU68</td>\n",
        "      <td>DAU00147</td>\n",
        "      <td>Lost River</td>\n",
@@ -298,7 +298,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24429.0</td>\n",
+       "      <td>25980.0</td>\n",
        "      <td>CAag_RU69</td>\n",
        "      <td>DAU00247</td>\n",
        "      <td>Butte Valley</td>\n",
@@ -311,15 +311,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon          24427.0         CAag_RU67              DAU00125   \n",
-       "1         1  Polygon          24428.0         CAag_RU68              DAU00147   \n",
-       "2         2  Polygon          24429.0         CAag_RU69              DAU00247   \n",
+       "   OBJECTID    Shape   UnitID   UnitUUID  NativeID          Name  \\\n",
+       "0         0  Polygon  25978.0  CAag_RU67  DAU00125    Lost River   \n",
+       "1         1  Polygon  25979.0  CAag_RU68  DAU00147    Lost River   \n",
+       "2         2  Polygon  25980.0  CAag_RU69  DAU00247  Butte Valley   \n",
        "\n",
-       "  ReportingUnitName                ReportingUnitTypeCV StateCV  \\\n",
-       "0        Lost River  Detailed Analysis Units by County      CA   \n",
-       "1        Lost River  Detailed Analysis Units by County      CA   \n",
-       "2      Butte Valley  Detailed Analysis Units by County      CA   \n",
+       "                              TypeCV StateCV  \\\n",
+       "0  Detailed Analysis Units by County      CA   \n",
+       "1  Detailed Analysis Units by County      CA   \n",
+       "2  Detailed Analysis Units by County      CA   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((-121.08710 41.99514, -120.70108 41.9...  \n",
@@ -361,11 +361,11 @@
     "dfs_2CADAUCO = pd.DataFrame() #empty dataframe\n",
     "dfs_2CADAUCO['OBJECTID'] = dfs_CADAUCO.index\n",
     "dfs_2CADAUCO['Shape'] = 'Polygon'\n",
-    "dfs_2CADAUCO['ReportingUnitID'] = dfs_CADAUCO['ReportingUnitID']\n",
-    "dfs_2CADAUCO['ReportingUnitUUID'] = dfs_CADAUCO['ReportingUnitUUID']\n",
-    "dfs_2CADAUCO['ReportingUnitNativeID'] = dfs_CADAUCO['ReportingUnitNativeID']\n",
-    "dfs_2CADAUCO['ReportingUnitName'] = dfs_CADAUCO['ReportingUnitName']\n",
-    "dfs_2CADAUCO['ReportingUnitTypeCV'] = dfs_CADAUCO['ReportingUnitTypeCV']\n",
+    "dfs_2CADAUCO['UnitID'] = dfs_CADAUCO['ReportingUnitID']\n",
+    "dfs_2CADAUCO['UnitUUID'] = dfs_CADAUCO['ReportingUnitUUID']\n",
+    "dfs_2CADAUCO['NativeID'] = dfs_CADAUCO['ReportingUnitNativeID']\n",
+    "dfs_2CADAUCO['Name'] = dfs_CADAUCO['ReportingUnitName']\n",
+    "dfs_2CADAUCO['TypeCV'] = dfs_CADAUCO['ReportingUnitTypeCV']\n",
     "dfs_2CADAUCO['StateCV'] = dfs_CADAUCO['StateCV']\n",
     "dfs_2CADAUCO['geometry'] = dfs_CADAUCO['geometry']\n",
     "\n",
@@ -403,11 +403,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
@@ -417,7 +417,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24427.0</td>\n",
+       "      <td>25978.0</td>\n",
        "      <td>CAag_RU67</td>\n",
        "      <td>DAU00125</td>\n",
        "      <td>Lost River</td>\n",
@@ -429,7 +429,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24428.0</td>\n",
+       "      <td>25979.0</td>\n",
        "      <td>CAag_RU68</td>\n",
        "      <td>DAU00147</td>\n",
        "      <td>Lost River</td>\n",
@@ -441,7 +441,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24429.0</td>\n",
+       "      <td>25980.0</td>\n",
        "      <td>CAag_RU69</td>\n",
        "      <td>DAU00247</td>\n",
        "      <td>Butte Valley</td>\n",
@@ -454,15 +454,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon          24427.0         CAag_RU67              DAU00125   \n",
-       "1         1  Polygon          24428.0         CAag_RU68              DAU00147   \n",
-       "2         2  Polygon          24429.0         CAag_RU69              DAU00247   \n",
+       "   OBJECTID    Shape   UnitID   UnitUUID  NativeID          Name  \\\n",
+       "0         0  Polygon  25978.0  CAag_RU67  DAU00125    Lost River   \n",
+       "1         1  Polygon  25979.0  CAag_RU68  DAU00147    Lost River   \n",
+       "2         2  Polygon  25980.0  CAag_RU69  DAU00247  Butte Valley   \n",
        "\n",
-       "  ReportingUnitName                ReportingUnitTypeCV StateCV  \\\n",
-       "0        Lost River  Detailed Analysis Units by County      CA   \n",
-       "1        Lost River  Detailed Analysis Units by County      CA   \n",
-       "2      Butte Valley  Detailed Analysis Units by County      CA   \n",
+       "                              TypeCV StateCV  \\\n",
+       "0  Detailed Analysis Units by County      CA   \n",
+       "1  Detailed Analysis Units by County      CA   \n",
+       "2  Detailed Analysis Units by County      CA   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((-121.08710 41.99514, -120.70108 41.9...  \n",
@@ -510,11 +510,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
@@ -524,7 +524,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24427.0</td>\n",
+       "      <td>25978.0</td>\n",
        "      <td>CAag_RU67</td>\n",
        "      <td>DAU00125</td>\n",
        "      <td>Lost River</td>\n",
@@ -536,7 +536,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24428.0</td>\n",
+       "      <td>25979.0</td>\n",
        "      <td>CAag_RU68</td>\n",
        "      <td>DAU00147</td>\n",
        "      <td>Lost River</td>\n",
@@ -548,7 +548,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24429.0</td>\n",
+       "      <td>25980.0</td>\n",
        "      <td>CAag_RU69</td>\n",
        "      <td>DAU00247</td>\n",
        "      <td>Butte Valley</td>\n",
@@ -560,7 +560,7 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24430.0</td>\n",
+       "      <td>25982.0</td>\n",
        "      <td>CAag_RU70</td>\n",
        "      <td>DAU00347</td>\n",
        "      <td>Scott Valley</td>\n",
@@ -572,7 +572,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24431.0</td>\n",
+       "      <td>25983.0</td>\n",
        "      <td>CAag_RU71</td>\n",
        "      <td>DAU00447</td>\n",
        "      <td>Shasta Valley</td>\n",
@@ -596,7 +596,7 @@
        "      <th>514</th>\n",
        "      <td>514</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24907.0</td>\n",
+       "      <td>25960.0</td>\n",
        "      <td>CAag_RU547</td>\n",
        "      <td>DAU40323</td>\n",
        "      <td>Upper Russian</td>\n",
@@ -608,7 +608,7 @@
        "      <th>516</th>\n",
        "      <td>516</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24908.0</td>\n",
+       "      <td>25961.0</td>\n",
        "      <td>CAag_RU548</td>\n",
        "      <td>DAU40423</td>\n",
        "      <td>Middle Russian</td>\n",
@@ -620,7 +620,7 @@
        "      <th>517</th>\n",
        "      <td>517</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24909.0</td>\n",
+       "      <td>25962.0</td>\n",
        "      <td>CAag_RU549</td>\n",
        "      <td>DAU40449</td>\n",
        "      <td>Middle Russian</td>\n",
@@ -632,7 +632,7 @@
        "      <th>518</th>\n",
        "      <td>518</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24910.0</td>\n",
+       "      <td>25964.0</td>\n",
        "      <td>CAag_RU550</td>\n",
        "      <td>DAU40523</td>\n",
        "      <td>Dry Creek</td>\n",
@@ -644,7 +644,7 @@
        "      <th>519</th>\n",
        "      <td>519</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24911.0</td>\n",
+       "      <td>25965.0</td>\n",
        "      <td>CAag_RU551</td>\n",
        "      <td>DAU40549</td>\n",
        "      <td>Dry Creek</td>\n",
@@ -658,33 +658,20 @@
        "</div>"
       ],
       "text/plain": [
-       "     OBJECTID    Shape  ReportingUnitID ReportingUnitUUID  \\\n",
-       "0           0  Polygon          24427.0         CAag_RU67   \n",
-       "1           1  Polygon          24428.0         CAag_RU68   \n",
-       "2           2  Polygon          24429.0         CAag_RU69   \n",
-       "3           3  Polygon          24430.0         CAag_RU70   \n",
-       "4           4  Polygon          24431.0         CAag_RU71   \n",
-       "..        ...      ...              ...               ...   \n",
-       "514       514  Polygon          24907.0        CAag_RU547   \n",
-       "516       516  Polygon          24908.0        CAag_RU548   \n",
-       "517       517  Polygon          24909.0        CAag_RU549   \n",
-       "518       518  Polygon          24910.0        CAag_RU550   \n",
-       "519       519  Polygon          24911.0        CAag_RU551   \n",
+       "     OBJECTID    Shape   UnitID    UnitUUID  NativeID            Name  \\\n",
+       "0           0  Polygon  25978.0   CAag_RU67  DAU00125      Lost River   \n",
+       "1           1  Polygon  25979.0   CAag_RU68  DAU00147      Lost River   \n",
+       "2           2  Polygon  25980.0   CAag_RU69  DAU00247    Butte Valley   \n",
+       "3           3  Polygon  25982.0   CAag_RU70  DAU00347    Scott Valley   \n",
+       "4           4  Polygon  25983.0   CAag_RU71  DAU00447   Shasta Valley   \n",
+       "..        ...      ...      ...         ...       ...             ...   \n",
+       "514       514  Polygon  25960.0  CAag_RU547  DAU40323   Upper Russian   \n",
+       "516       516  Polygon  25961.0  CAag_RU548  DAU40423  Middle Russian   \n",
+       "517       517  Polygon  25962.0  CAag_RU549  DAU40449  Middle Russian   \n",
+       "518       518  Polygon  25964.0  CAag_RU550  DAU40523       Dry Creek   \n",
+       "519       519  Polygon  25965.0  CAag_RU551  DAU40549       Dry Creek   \n",
        "\n",
-       "    ReportingUnitNativeID ReportingUnitName  \\\n",
-       "0                DAU00125        Lost River   \n",
-       "1                DAU00147        Lost River   \n",
-       "2                DAU00247      Butte Valley   \n",
-       "3                DAU00347      Scott Valley   \n",
-       "4                DAU00447     Shasta Valley   \n",
-       "..                    ...               ...   \n",
-       "514              DAU40323     Upper Russian   \n",
-       "516              DAU40423    Middle Russian   \n",
-       "517              DAU40449    Middle Russian   \n",
-       "518              DAU40523         Dry Creek   \n",
-       "519              DAU40549         Dry Creek   \n",
-       "\n",
-       "                   ReportingUnitTypeCV StateCV  \\\n",
+       "                                TypeCV StateCV  \\\n",
        "0    Detailed Analysis Units by County      CA   \n",
        "1    Detailed Analysis Units by County      CA   \n",
        "2    Detailed Analysis Units by County      CA   \n",
@@ -720,7 +707,7 @@
    ],
    "source": [
     "# drop NA rows\n",
-    "outdf = outdf.dropna(subset=['ReportingUnitID'])\n",
+    "outdf = outdf.dropna(subset=['UnitID'])\n",
     "outdf"
    ]
   },
