--- a/CreateAppShapefiles/App2ShapeFiles_Custom_C.ipynb
+++ b/CreateAppShapefiles/App2ShapeFiles_Custom_C.ipynb
@@ -235,11 +235,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
@@ -249,7 +249,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24417</td>\n",
+       "      <td>25967</td>\n",
        "      <td>CAag_RU57</td>\n",
        "      <td>3</td>\n",
        "      <td>Central Coast</td>\n",
@@ -261,7 +261,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24418</td>\n",
+       "      <td>25968</td>\n",
        "      <td>CAag_RU58</td>\n",
        "      <td>10</td>\n",
        "      <td>Colorado River</td>\n",
@@ -273,7 +273,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24419</td>\n",
+       "      <td>25969</td>\n",
        "      <td>CAag_RU59</td>\n",
        "      <td>1</td>\n",
        "      <td>North Coast</td>\n",
@@ -286,15 +286,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            24417         CAag_RU57                     3   \n",
-       "1         1  Polygon            24418         CAag_RU58                    10   \n",
-       "2         2  Polygon            24419         CAag_RU59                     1   \n",
+       "   OBJECTID    Shape  UnitID   UnitUUID NativeID            Name  \\\n",
+       "0         0  Polygon   25967  CAag_RU57        3   Central Coast   \n",
+       "1         1  Polygon   25968  CAag_RU58       10  Colorado River   \n",
+       "2         2  Polygon   25969  CAag_RU59        1     North Coast   \n",
        "\n",
-       "  ReportingUnitName ReportingUnitTypeCV StateCV  \\\n",
-       "0     Central Coast   Hydrologic Region      CA   \n",
-       "1    Colorado River   Hydrologic Region      CA   \n",
-       "2       North Coast   Hydrologic Region      CA   \n",
+       "              TypeCV StateCV  \\\n",
+       "0  Hydrologic Region      CA   \n",
+       "1  Hydrologic Region      CA   \n",
+       "2  Hydrologic Region      CA   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((-122.11808 37.25528, -122.11795 37.2...  \n",
@@ -336,11 +336,11 @@
     "dfs_2HR = pd.DataFrame() #empty dataframe\n",
     "dfs_2HR['OBJECTID'] = dfs_HR.index\n",
     "dfs_2HR['Shape'] = 'Polygon'\n",
-    "dfs_2HR['ReportingUnitID'] = dfs_HR['ReportingUnitID']\n",
-    "dfs_2HR['ReportingUnitUUID'] = dfs_HR['ReportingUnitUUID']\n",
-    "dfs_2HR['ReportingUnitNativeID'] = dfs_HR['ReportingUnitNativeID']\n",
-    "dfs_2HR['ReportingUnitName'] = dfs_HR['ReportingUnitName']\n",
-    "dfs_2HR['ReportingUnitTypeCV'] = dfs_HR['ReportingUnitTypeCV']\n",
+    "dfs_2HR['UnitID'] = dfs_HR['ReportingUnitID']\n",
+    "dfs_2HR['UnitUUID'] = dfs_HR['ReportingUnitUUID']\n",
+    "dfs_2HR['NativeID'] = dfs_HR['ReportingUnitNativeID']\n",
+    "dfs_2HR['Name'] = dfs_HR['ReportingUnitName']\n",
+    "dfs_2HR['TypeCV'] = dfs_HR['ReportingUnitTypeCV']\n",
     "dfs_2HR['StateCV'] = dfs_HR['StateCV']\n",
     "dfs_2HR['geometry'] = dfs_HR['geometry']\n",
     "\n",
@@ -378,11 +378,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
@@ -392,7 +392,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24417</td>\n",
+       "      <td>25967</td>\n",
        "      <td>CAag_RU57</td>\n",
        "      <td>3</td>\n",
        "      <td>Central Coast</td>\n",
@@ -404,7 +404,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24418</td>\n",
+       "      <td>25968</td>\n",
        "      <td>CAag_RU58</td>\n",
        "      <td>10</td>\n",
        "      <td>Colorado River</td>\n",
@@ -416,7 +416,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24419</td>\n",
+       "      <td>25969</td>\n",
        "      <td>CAag_RU59</td>\n",
        "      <td>1</td>\n",
        "      <td>North Coast</td>\n",
@@ -429,15 +429,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            24417         CAag_RU57                     3   \n",
-       "1         1  Polygon            24418         CAag_RU58                    10   \n",
-       "2         2  Polygon            24419         CAag_RU59                     1   \n",
+       "   OBJECTID    Shape  UnitID   UnitUUID NativeID            Name  \\\n",
+       "0         0  Polygon   25967  CAag_RU57        3   Central Coast   \n",
+       "1         1  Polygon   25968  CAag_RU58       10  Colorado River   \n",
+       "2         2  Polygon   25969  CAag_RU59        1     North Coast   \n",
        "\n",
-       "  ReportingUnitName ReportingUnitTypeCV StateCV  \\\n",
-       "0     Central Coast   Hydrologic Region      CA   \n",
-       "1    Colorado River   Hydrologic Region      CA   \n",
-       "2       North Coast   Hydrologic Region      CA   \n",
+       "              TypeCV StateCV  \\\n",
+       "0  Hydrologic Region      CA   \n",
+       "1  Hydrologic Region      CA   \n",
+       "2  Hydrologic Region      CA   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((-122.11808 37.25528, -122.11795 37.2...  \n",
@@ -485,11 +485,11 @@
        "      <th></th>\n",
        "      <th>OBJECTID</th>\n",
        "      <th>Shape</th>\n",
-       "      <th>ReportingUnitID</th>\n",
-       "      <th>ReportingUnitUUID</th>\n",
-       "      <th>ReportingUnitNativeID</th>\n",
-       "      <th>ReportingUnitName</th>\n",
-       "      <th>ReportingUnitTypeCV</th>\n",
+       "      <th>UnitID</th>\n",
+       "      <th>UnitUUID</th>\n",
+       "      <th>NativeID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>TypeCV</th>\n",
        "      <th>StateCV</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
@@ -499,7 +499,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24417</td>\n",
+       "      <td>25967</td>\n",
        "      <td>CAag_RU57</td>\n",
        "      <td>3</td>\n",
        "      <td>Central Coast</td>\n",
@@ -511,7 +511,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24418</td>\n",
+       "      <td>25968</td>\n",
        "      <td>CAag_RU58</td>\n",
        "      <td>10</td>\n",
        "      <td>Colorado River</td>\n",
@@ -523,7 +523,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24419</td>\n",
+       "      <td>25969</td>\n",
        "      <td>CAag_RU59</td>\n",
        "      <td>1</td>\n",
        "      <td>North Coast</td>\n",
@@ -535,7 +535,7 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24420</td>\n",
+       "      <td>25971</td>\n",
        "      <td>CAag_RU60</td>\n",
        "      <td>8</td>\n",
        "      <td>North Lahontan</td>\n",
@@ -547,7 +547,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24421</td>\n",
+       "      <td>25972</td>\n",
        "      <td>CAag_RU61</td>\n",
        "      <td>5</td>\n",
        "      <td>Sacramento River</td>\n",
@@ -559,7 +559,7 @@
        "      <th>5</th>\n",
        "      <td>5</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24422</td>\n",
+       "      <td>25973</td>\n",
        "      <td>CAag_RU62</td>\n",
        "      <td>2</td>\n",
        "      <td>San Francisco Bay</td>\n",
@@ -571,7 +571,7 @@
        "      <th>6</th>\n",
        "      <td>6</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24423</td>\n",
+       "      <td>25974</td>\n",
        "      <td>CAag_RU63</td>\n",
        "      <td>6</td>\n",
        "      <td>San Joaquin River</td>\n",
@@ -583,7 +583,7 @@
        "      <th>7</th>\n",
        "      <td>7</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24424</td>\n",
+       "      <td>25975</td>\n",
        "      <td>CAag_RU64</td>\n",
        "      <td>4</td>\n",
        "      <td>South Coast</td>\n",
@@ -595,7 +595,7 @@
        "      <th>8</th>\n",
        "      <td>8</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24425</td>\n",
+       "      <td>25976</td>\n",
        "      <td>CAag_RU65</td>\n",
        "      <td>9</td>\n",
        "      <td>South Lahontan</td>\n",
@@ -607,7 +607,7 @@
        "      <th>9</th>\n",
        "      <td>9</td>\n",
        "      <td>Polygon</td>\n",
-       "      <td>24426</td>\n",
+       "      <td>25977</td>\n",
        "      <td>CAag_RU66</td>\n",
        "      <td>7</td>\n",
        "      <td>Tulare Lake</td>\n",
@@ -620,29 +620,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   OBJECTID    Shape  ReportingUnitID ReportingUnitUUID ReportingUnitNativeID  \\\n",
-       "0         0  Polygon            24417         CAag_RU57                     3   \n",
-       "1         1  Polygon            24418         CAag_RU58                    10   \n",
-       "2         2  Polygon            24419         CAag_RU59                     1   \n",
-       "3         3  Polygon            24420         CAag_RU60                     8   \n",
-       "4         4  Polygon            24421         CAag_RU61                     5   \n",
-       "5         5  Polygon            24422         CAag_RU62                     2   \n",
-       "6         6  Polygon            24423         CAag_RU63                     6   \n",
-       "7         7  Polygon            24424         CAag_RU64                     4   \n",
-       "8         8  Polygon            24425         CAag_RU65                     9   \n",
-       "9         9  Polygon            24426         CAag_RU66                     7   \n",
+       "   OBJECTID    Shape  UnitID   UnitUUID NativeID               Name  \\\n",
+       "0         0  Polygon   25967  CAag_RU57        3      Central Coast   \n",
+       "1         1  Polygon   25968  CAag_RU58       10     Colorado River   \n",
+       "2         2  Polygon   25969  CAag_RU59        1        North Coast   \n",
+       "3         3  Polygon   25971  CAag_RU60        8     North Lahontan   \n",
+       "4         4  Polygon   25972  CAag_RU61        5   Sacramento River   \n",
+       "5         5  Polygon   25973  CAag_RU62        2  San Francisco Bay   \n",
+       "6         6  Polygon   25974  CAag_RU63        6  San Joaquin River   \n",
+       "7         7  Polygon   25975  CAag_RU64        4        South Coast   \n",
+       "8         8  Polygon   25976  CAag_RU65        9     South Lahontan   \n",
+       "9         9  Polygon   25977  CAag_RU66        7        Tulare Lake   \n",
        "\n",
-       "   ReportingUnitName ReportingUnitTypeCV StateCV  \\\n",
-       "0      Central Coast   Hydrologic Region      CA   \n",
-       "1     Colorado River   Hydrologic Region      CA   \n",
-       "2        North Coast   Hydrologic Region      CA   \n",
-       "3     North Lahontan   Hydrologic Region      CA   \n",
-       "4   Sacramento River   Hydrologic Region      CA   \n",
-       "5  San Francisco Bay   Hydrologic Region      CA   \n",
-       "6  San Joaquin River   Hydrologic Region      CA   \n",
-       "7        South Coast   Hydrologic Region      CA   \n",
-       "8     South Lahontan   Hydrologic Region      CA   \n",
-       "9        Tulare Lake   Hydrologic Region      CA   \n",
+       "              TypeCV StateCV  \\\n",
+       "0  Hydrologic Region      CA   \n",
+       "1  Hydrologic Region      CA   \n",
+       "2  Hydrologic Region      CA   \n",
+       "3  Hydrologic Region      CA   \n",
+       "4  Hydrologic Region      CA   \n",
+       "5  Hydrologic Region      CA   \n",
+       "6  Hydrologic Region      CA   \n",
+       "7  Hydrologic Region      CA   \n",
+       "8  Hydrologic Region      CA   \n",
+       "9  Hydrologic Region      CA   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((-122.11808 37.25528, -122.11795 37.2...  \n",
@@ -664,7 +664,7 @@
    ],
    "source": [
     "# drop NA rows\n",
-    "outdf = outdf.dropna(subset=['ReportingUnitID'])\n",
+    "outdf = outdf.dropna(subset=['UnitID'])\n",
     "outdf"
    ]
   },
